# NowEDA

./: .gitignore  404.html  CACHE_CLEARED.txt  LICENSE  README.md  index.html  mkdocs.yml  playground.ipynb  playground_report.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api-reference/: index.html
changelog/: index.html
cli/: index.html
docs/: api-reference.md  changelog.md  cli.md  faq.md  html-reports.md  index.md  insights.md  installation.md  quickstart.md  scoring.md
docs/examples/: basic-eda.md  custom-plugin.md  multi-format.md  security-audit.md
docs/plugins/: correlation.md  custom.md  duplicates.md  encoding.md  missing.md  outliers.md  overview.md  pii.md  schema.md  stats.md
docs/user-guide/: accessor.md  reading-data.md  reports.md
examples/: sample.csv
examples/basic-eda/: index.html
examples/custom-plugin/: index.html
examples/multi-format/: index.html
examples/security-audit/: index.html
faq/: index.html
html-reports/: index.html
insights/: index.html
installation/: index.html
noweda/: __init__.py  accessor.py  cli.py  io.py  ml_recommendations.py  ml_utils.py  temporal_utils.py  ui.py
noweda/core/: engine.py
noweda/insights/: generator.py
noweda/plugins/: __init__.py  base.py  correlation.py  duplicates.py  encoding.py  missing.py  outliers.py  pii.py  schema.py  stats.py
noweda/report/: html.py
noweda/scoring/: scorer.py
plugins/correlation/: index.html
plugins/custom/: index.html
plugins/duplicates/: index.html
plugins/encoding/: index.html
plugins/missing/: index.html
plugins/outliers/: index.html
plugins/overview/: index.html
plugins/pii/: index.html
plugins/schema/: index.html
plugins/stats/: index.html
quickstart/: index.html
scoring/: index.html
search/: search_index.json
tests/: test_basic.py  test_formats.py
user-guide/accessor/: index.html
user-guide/reading-data/: index.html
user-guide/reports/: index.html
