[project]
name = "noweda"
version = "0.1.0"
description = "Automated EDA with insights, scoring, and security-aware detection — built as a native pandas extension."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Daniel Peng", email = "danielpeng95@gmail.com" }]
keywords = ["eda", "data-analysis", "pandas", "data-quality", "pii-detection"]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "openpyxl>=3.0",
]

[project.scripts]
noweda = "noweda.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["noweda*"]
