[project]
name = "noweda"
version = "0.1.0"
description = "Automated EDA with insights, scoring, and security-aware detection — built as a native pandas extension."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [{ name = "Daniel Peng", email = "danielpeng95@gmail.com" }]
keywords = ["eda", "data-analysis", "pandas", "data-quality", "pii-detection", "automated-eda", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "openpyxl>=3.0",       # Excel (.xlsx, .ods, etc.)
    "lxml>=4.6",           # XML + HTML parsing
]

[project.optional-dependencies]
parquet = ["pyarrow>=8.0"]          # .parquet, .feather, .orc
hdf    = ["tables>=3.7"]            # .h5, .hdf5
spss   = ["pyreadstat>=1.1"]        # .sav, .zsav
full   = [
    "pyarrow>=8.0",
    "tables>=3.7",
    "pyreadstat>=1.1",
]

[project.urls]
Homepage = "https://github.com/codewithdaniel1/NowEDA"
Repository = "https://github.com/codewithdaniel1/NowEDA"
"Bug Tracker" = "https://github.com/codewithdaniel1/NowEDA/issues"

[project.scripts]
noweda = "noweda.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["noweda*"]
